--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "organic-express-api-doc",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Organelle for generating documentation by runtime reflection of express mounted route handlers and their source code.",
   "main": "index.js",
   "scripts": {
@@ -13,12 +13,13 @@
     "chai": "~1.9.1"
   },
   "dependencies": {
-    "organic-nucleus": "0.0.1",
-    "underscore": "~1.6.0",
+    "async": "^0.9.0",
     "clone": "~0.1.17",
     "esprima": "~1.2.2",
+    "glob-stream": "^4.0.0",
     "markedejs": "~0.1.0",
-    "async": "~0.9.0"
+    "organic-nucleus": "0.0.1",
+    "underscore": "~1.6.0"
   },
   "repository": {
     "type": "git",
