--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "clone": "~0.1.17",
+    "ejs": "^2.0.8",
     "esprima": "~1.2.2",
     "glob-stream": "^4.0.0",
     "markedejs": "~0.1.0",
