--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "organic-express-api-doc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Organelle for generating documentation by runtime reflection of express mounted route handlers and their source code.",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,11 @@
   "author": "Boris Filipov",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "~1.21.3",
-    "chai": "~1.9.1"
+    "chai": "^1.10.0",
+    "express": "^4.11.0",
+    "mocha": "^2.1.0",
+    "organic-express-routes": "0.0.2",
+    "organic-plasma": "0.0.6"
   },
   "dependencies": {
     "async": "^0.9.0",
