--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "organic-express-api-doc",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Organelle for generating documentation by runtime reflection of express mounted route handlers and their source code.",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "clone": "~0.1.17",
+    "deep-extend": "^0.3.2",
     "ejs": "^2.0.8",
     "esprima": "~1.2.2",
     "express-buffer-response": "^1.0.3",
