Update esprima with ES6 handling, update other deps, replace underscore with lodash

--- a/package.json
+++ b/package.json
@@ -16,18 +16,15 @@
     "organic-plasma": "0.0.6"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "clone": "~0.1.17",
-    "deep-extend": "^0.3.2",
+    "async": "^1.5.0",
     "ejs": "^2.0.8",
-    "esprima": "~1.2.2",
+    "esprima": "^2.7.1",
     "express-buffer-response": "^1.0.3",
-    "glob-stream": "^4.0.0",
+    "glob-stream": "^5.3.1",
+    "lodash": "^3.10.1",
     "markedejs": "~0.1.0",
     "methods": "^1.1.1",
-    "on-finished": "^2.2.0",
-    "organic-nucleus": "0.0.1",
-    "underscore": "~1.6.0"
+    "organic-nucleus": "0.0.1"
   },
   "repository": {
     "type": "git",
